--- a/src/Components/ImageBoard/Styles.module.scss
+++ b/src/Components/ImageBoard/Styles.module.scss
@@ -1,10 +1,12 @@
 @use "../../index.scss";
 
-.image {
-  display: flex;
-  margin: 10px auto;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
-  border-radius: 15px;
-  max-width: calc(100% - 30px);
+.container {
+  margin: 0 0 30px;
+  .image {
+    display: flex;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    max-width: 100%;
+    max-height: 100vh;
+  }
 }
